# aspect-rules_oci

./: .bazelignore  BUILD.bazel  README.md  WORKSPACE  app.js  container.bzl  package.json  pnpm-lock.yaml
build-container/: Dockerfile  build.sh  install_bazelisk.sh  install_docker.sh
